test/valid/test23.sl
string s;
s := concatenate(substring("abcdef", 2, 3), "xyz");
print(position(s, "xyz"));