test/invalid/test4.sl
string s;
s := substring("abc", "invalid", 2); // Error: Non-integer position.